--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -19,6 +20,7 @@
     "@dynamic-labs/wagmi-connector": "^4.30.1",
     "@ethereum-attestation-service/eas-sdk": "^2.7.0",
     "@headlessui/react": "^2.2.0",
+    "@openlabels/sdk": "file:../oli-sdk",
     "@radix-ui/react-toast": "^1.2.6",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.86.0",
