--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@dynamic-labs/wagmi-connector": "^4.30.1",
     "@ethereum-attestation-service/eas-sdk": "^2.7.0",
     "@headlessui/react": "^2.2.0",
-    "@openlabels/sdk": "^0.1.1",
+    "@openlabels/oli-sdk": "^0.1.0",
     "@radix-ui/react-toast": "^1.2.6",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.86.0",
