--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "js-yaml": "^4.1.0",
     "jsonlint-mod": "^1.7.6",
     "lucide-react": "^0.475.0",
+    "mermaid": "^11.12.1",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-cookie-consent": "^9.0.0",
@@ -46,13 +47,21 @@
     "reading-time": "^1.5.0",
     "recharts": "^2.15.1",
     "rehype": "^13.0.2",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.14.1",
     "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "shiki": "^3.10.0",
+    "unified": "^11.0.5",
     "viem": "^2.37.3",
     "wagmi": "^2.16.9",
     "yaml-lint": "^1.7.0"
